# grammateus

./: .gitignore  Cargo.toml  README.md
src/: greek_char.rs  greek_word.rs  lib.rs
src/chars/: diacritics.rs  errors.rs  literals.rs  mod.rs  tests.rs
src/words/: mod.rs  tests.rs
